--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,16 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Michelo 
+logo: "/images/myself.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Information Management, Software Developer, GIS Specialist & Data Scientist.
   <br><br>
-  Second description 
+  Self-motivated, team player, and responsible, with significant experience in improving information and data understanding. Holding a Master's degree, and several professional certifications in computer science and management, and related fields. Bilingual in French and English, I have worked closely with governments, NGOs, national health programs (EPI, malaria, etc.), international organizations, UN agencies, local and international universities, and civil society to promote the development and the use of data for development, information management, and coordination, database development and GIS
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/michelo243/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+
+colors:
+  crimson: '#900C3F'
