adding first data

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Michelo 
+title: Michel Isamuna Nswenaba
 logo: "/images/myself.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Information Management, Software Developer, GIS Specialist & Data Scientist.
