--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Michel Isamuna Nswenaba
+title: Michel Isamuna N.
 logo: "/images/myself.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Information Management, Software Developer, GIS Specialist & Data Scientist.
