--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/myself.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Information Management, Software Developer, GIS Specialist & Data Scientist.
   <br><br>
-  Self-motivated, team player, and responsible, with significant experience in improving information and data understanding. Holding a Master's degree, and several professional certifications in computer science and management, and related fields. Bilingual in French and English, I have worked closely with governments, NGOs, national health programs (EPI, malaria, etc.), international organizations, UN agencies, local and international universities, and civil society to promote the development and the use of data for development, information management, and coordination, database development and GIS
+  Motivated, a team player with a sense of responsibility, with extensive experience in improving the understanding of information and data.
   <br><br>
   <a href="https://www.linkedin.com/in/michelo243/">View My LinkedIn Profile</a> 
   
